<resources>
    <string name="app_name">TVS Test</string>
    <string name="action_settings">Settings</string>
    <string name="api_fail_msg">Unable to fetch data from server!</string>
    <string name="network_fail_msg">No network! please check internet connection and try</string>
    <string name="name">Name :</string>
    <string name="designation">Designation :</string>
    <string name="city">City :</string>
    <string name="doj">DOJ :</string>
    <string name="salary">Salary :</string>
    <string name="emp_id">Emp ID :</string>
    <string name="capture">Capture Image</string>
    <string name="bar_chart">Bar Chart</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="map">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyClfUpKYP7pGO514jV90-fYx_lAnaDq_hY</string>
    <string name="invalid_credentails">Invalid username or Password</string>
    <string name="somethin_wrong">Something is wrong at server!</string>
    <string name="login">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_cnt_empty">Username and password cannot be empty</string>
    <string name="details">Details</string>
    <string name="search_hint">Search for Name or Designation</string>
    <string name="no_data">No data found</string>

</resources>
